# t1

./: .gitignore  2026-00065-面向工业三维模型集群LOD与双通道剔除算法-汪佳骏.docx  CHANGELOG.md  CMakeLists.txt  README.md
_downloaded_resources/bunny_v2/: bunny.gltf.zippp
cmake/: FindNvproCore2.cmake
docs/: code-organization.md  external-libraries-analysis.md  key-functions-blog.md
shaders/: SWclusters.comp.glsl  build_setup.comp.glsl  clusters.mesh.glsl  culling.glsl  culling_frustum.inc  culling_hiz.inc  frag.glsl  fullscreen.vert.glsl  fullscreen_atomic.frag.glsl  hiz.comp.glsl  render_cluster_bbox.frag.glsl  render_cluster_bbox.mesh.glsl  render_instance_bbox.frag.glsl  render_instance_bbox.mesh.glsl  shaderio_core.h  shaderio_scene.h  shaderio_streaming.h  stream_agefilter_groups.comp.glsl  stream_setup.comp.glsl  stream_update_scene.comp.glsl  streaming.glsl  traversal_presort.comp.glsl  traversal_run.comp.glsl
shaders/common/: attribute_encoding.h  culling.glsl  culling_constants.inc  culling_frustum.inc  culling_hiz.inc  culling_raster.inc  render_shading.glsl
shaders/compute/streaming/: streaming.glsl  streaming_age_filter_groups.comp.glsl  streaming_request_setup.comp.glsl  streaming_scene_update.comp.glsl
shaders/compute/traversal/: traversal.glsl  traversal_init.comp.glsl  traversal_presort.comp.glsl  traversal_run.comp.glsl  traversal_run_separate_groups.comp.glsl
shaders/debug/: render_cluster_bbox.frag.glsl  render_cluster_bbox.mesh.glsl  render_instance_bbox.frag.glsl  render_instance_bbox.mesh.glsl
shaders/interface/: shaderio.h  shaderio_building.h  shaderio_core.h  shaderio_scene.h  shaderio_streaming.h
shaders/passes/cluster/: cluster_mesh.mesh.glsl  cluster_shading.frag.glsl  software_cluster_raster.comp.glsl
shaders/passes/debug/: render_cluster_bbox.frag.glsl  render_cluster_bbox.mesh.glsl  render_instance_bbox.frag.glsl  render_instance_bbox.mesh.glsl
shaders/passes/fullscreen/: atomic_raster_resolve.frag.glsl  fullscreen.vert.glsl  hierarchical_z.comp.glsl  sky_background.frag.glsl
shaders/post/: fullscreen.vert.glsl  fullscreen_atomic.frag.glsl  fullscreen_background.frag.glsl  hiz.comp.glsl
shaders/render/: SWclusters.comp.glsl  clusters.mesh.glsl  frag.glsl
shaders/shared/common/: attribute_encoding.h  (+6 more)
shaders/streaming/: stream_agefilter_groups.comp.glsl  stream_setup.comp.glsl  stream_update_scene.comp.glsl  streaming.glsl
shaders/traversal/: traversal.glsl  traversal_init.comp.glsl  traversal_presort.comp.glsl  traversal_run.comp.glsl  traversal_run_separate_groups.comp.glsl
src/: cache.cpp  cgltf.cpp  clusterlod.cpp  hiz.cpp  hiz.hpp  lodclusters.cpp  lodclusters.hpp  lodclusters_ui.cpp  main.cpp  meshlod.cpp  meshlod.h  meshlod_bounds.h  meshlod_build.h  meshlod_clustering.h  meshlod_config.h  meshlod_impl.h  meshlod_local_indices.h  meshlod_simplify.h  meshlod_types.h  preloaded.hpp  renderer.cpp  renderer.hpp  renderer_clusters_lod.cpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  scene_cluster_compression.cpp  serialization.hpp  streaming.cpp  streamutils.cpp  streamutils.hpp
src/app/: lodclusters.cpp  lodclusters.hpp  lodclusters_config.cpp  lodclusters_lifecycle.cpp  lodclusters_runtime.cpp  lodclusters_scene.cpp  lodclusters_ui.cpp  main.cpp
src/application/: lod_clusters_app.cpp  lod_clusters_app.hpp  lod_clusters_ui.cpp  main.cpp
src/core/: cache.cpp  serialization.hpp
src/gpu/: hierarchical_z.cpp  hierarchical_z.hpp  preloaded_scene_gpu.cpp  preloaded_scene_gpu.hpp  renderer_resources.cpp  renderer_resources.hpp
src/io/: scene_cache.cpp  scene_gltf.cpp  serialization.hpp
src/meshlod/: lod.h  meshlod.cpp  meshlod.h  meshlod_bounds.h  meshlod_build.h  meshlod_clustering.h  meshlod_config.h  meshlod_impl.h  meshlod_learned_importance.h  meshlod_local_indices.h  meshlod_simplify.h  meshlod_types.h
src/renderer/: hiz.cpp  hiz.hpp  preloaded.cpp  preloaded.hpp  renderer.cpp  renderer.hpp  renderer_clusters_lod.cpp  resources.cpp  resources.hpp
src/rendering/: cluster_lod_renderer.cpp  renderer.cpp  renderer.hpp
src/scene/: clusterlod.cpp  scene.cpp  scene.hpp  scene_cluster_compression.cpp  scene_gltf.cpp
src/streaming/: scene_streaming.cpp  streaming.cpp  streaming.hpp  streamutils.cpp  streamutils.hpp
(+18 files in other folders)
